Исправление swagger'a
